[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_tutorial"
version = "0.0.1"
authors = [
    { name = "Nayuki", email = "nayuki.hara@lnls.br" }
]
description = "A sample package"
readme =  "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Licese :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.cnpem.com/nayuki.hara/dojo"
"Bug Tracker" = "https://gitlab.cnpem.com/nayuki.hara/dojo/issues"